--- a/src/stylesheets/ColorPicker.css
+++ b/src/stylesheets/ColorPicker.css
@@ -1,3 +1,12 @@
+button {
+	margin: 0 5px;
+	padding: 10px;
+	border: none;
+	cursor: pointer;
+	color: white;
+	font-size: 16px;
+}
+
 .red {
 	background-color: rgb(208, 45, 45);
 }
